Se agrega un H2 y un parrafo

--- a/index.html
+++ b/index.html
@@ -8,5 +8,8 @@
 </head>
 <body>
     <h1>Bienvenido GIT a nuiestras vidas</h1>
+
+    <h2>Esto es un segundo comit</h2>
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Odit enim perferendis ut eaque, id consectetur eveniet at quam voluptas, praesentium itaque eligendi aliquam sequi asperiores voluptatem dolores exercitationem maiores repellendus.</p>
 </body>
 </html>
