--- a/index.html
+++ b/index.html
@@ -12,5 +12,10 @@
     <h2>Esto es un segundo comit</h2>
     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Odit enim perferendis ut eaque, id consectetur eveniet at quam voluptas, praesentium itaque eligendi aliquam sequi asperiores voluptatem dolores exercitationem maiores repellendus.</p>
     <h3>Tercer comit, ultima version</h3>
+
+    <footer>
+        <h4>Esto es un footer</h4>
+        <p>Todos los derechos</p>
+    </footer>
 </body>
 </html>
