--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Clase 6</title>
+    <link rel="stylesheet" href="css/estilo.css">
 </head>
 <body>
     <h1>Bienvenido GIT a nuiestras vidas</h1>
@@ -12,6 +13,8 @@
     <h2>Esto es un segundo comit</h2>
     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Odit enim perferendis ut eaque, id consectetur eveniet at quam voluptas, praesentium itaque eligendi aliquam sequi asperiores voluptatem dolores exercitationem maiores repellendus.</p>
     <h3>Tercer comit, ultima version</h3>
+
+
 
     <footer>
         <h4>Esto es un footer</h4>
